Adds index.html

--- a/index.html
+++ b/index.html
@@ -1,12 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>HTML Images</title>
-  </head>
-  <body>
-    <!-- Your code here -->
-  </body>
-</html>
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ4Z5mP3N8_vPXfV4M4jR5M_J0PLBgqJmm9Ww&usqp=CAU" 
+alt="Lionel Messi Celebration vs Netherlands WC KO 2022">
+<img src="https://i.pinimg.com/736x/52/ce/8e/52ce8e2f2cd3aa60e26f2c3089a40e6c.jpg"
+ alt="Lionel Messi goal vs Manchester United UCL 2009 Final">
+ <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQnECEl99Ythq-Zc7jyY7w4ujMuOGoVGSN4zCgrJ_RLAVdELhyRFJMNL9Um2fuuL9C0Pwo&usqp=CAU" 
+ alt="Lionel Messi World Cup penalty goal" 
+ title="Lionel Messi scoring a penalty goal in the World Cup">
